--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/f260a15132.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Coustard:wght@900&family=Londrina+Outline&display=swap" rel="stylesheet">
-    <title>Calculator with &#f1499 by SarK</title>
+    <title>Calculator with &#9829; by SarK</title>
 </head>
 
 <body>
